@@ -1,3 +1,6 @@
 
+=== (next) ===
+FIXED: incorrect webpack dist config
+
 === 1.0.0 (2017-12-10) ===
 Initial version
